--- a/frontEnd_angular/frontEndAngular/src/index.html
+++ b/frontEnd_angular/frontEndAngular/src/index.html
@@ -5,9 +5,9 @@
   <title>My Hospital</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="icon.ico">
+  <link rel="icon" type="image/x-icon" href="icon.icon">
 </head>
 <body>
   <app-root></app-root>
 </body>
-</html>
+</html> 
