--- a/FrontEnd_Angular/FrontEndAngular/src/index.html
+++ b/FrontEnd_Angular/FrontEndAngular/src/index.html
@@ -1,16 +1,13 @@
 <!doctype html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>FrontEndAngular</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8">
+  <title>My Hospital</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="icon.icon">
 </head>
-
 <body>
-    <app-root></app-root>
+  <app-root></app-root>
 </body>
-
-</html>
+</html> 
